package com.cpz.processing.controls.labelcontrol.style;

public record LabelRenderStyle(String text,
                               int textColor,
                               LabelTypography typography) {
}
