package com.cpz.processing.controls.labelcontrol.view;

/**
 * @author CPZ
 */
public record LabelViewState(float x,
                             float y,
                             String text,
                             boolean enabled) {
}
